--- a/en/m/musclebrain.746557.wikitext
+++ b/en/m/musclebrain.746557.wikitext
@@ -13,7 +13,7 @@
 # {{lb|en|US|slang|pejorative}} A large, strong, but [[inept]], [[bumbling]], [[buffoon]]ish or [[unintelligent]] [[man]]
 
 ====Synonyms====
-* {{sense|participant in physical sports}} {{l|en|athlete}}
+* {{sense|participant in physical sports}} {{l|en|athlete}}, {{l|en|jock}}
 * {{sense|idiot}} {{l|en|bruiser}}, {{l|en|dumbbell}}, {{l|en|moron}}, {{l|en|buffoon}}, {{l|en|dimwit}}, {{l|en|pinhead}}, {{l|en|meathead}}, {{l|en|birdbrain}}, {{l|en|peabrain}}, {{l|en|goon}}, {{l|en|dummy}}, {{l|en|dipstick}}, {{l|en|idiot}}
 
 [[Category:en:People]]
