t+sk:[[štvorstranný]] ([[WT:EDIT|Assisted]]) <quadrilateral#53718171>

--- a/en/q/quadrilateral.4319.wikitext
+++ b/en/q/quadrilateral.4319.wikitext
@@ -106,6 +106,7 @@ From {{der|en|la|quadrilaterus}}, {{m|en|quadri-||four}} + {{cog|la|laterālis||
 * Portuguese: {{t+|pt|quadrilátero}}, {{t|pt|quadrilateral}}
 * Romanian: {{t+|ro|cvadrilateral|m}}
 * Russian: {{t+|ru|четырёхсторо́нний|tr=četyrjoxstorónnij}}
+* Slovak: {{t|sk|štvorstranný}}
 * Spanish: {{t+|es|cuadrilátero}}
 * Tagalog: {{t|tl|patsihain}}
 * Welsh: {{t|cy|pedrongl}}
