--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -18,6 +18,7 @@ From {{inh|en|enm|lether}}, from {{inh|en|ang|leþer||leather}}, from {{inh|en|g
 # {{lb|en|colloquial}} A [[cricket]] ball or [[football]].
 # (''plural'': '''leathers''') clothing made from the skin of animals, often worn by [[motorcycle]] riders.
 # {{lb|en|baseball}} A good defensive play
+# {{lb|en|boxing}} A [[punch]]. <!-- from the material of the gloves --!>
 #: ''Jones showed good '''leather''' to snare that [[liner]].''
 # {{lb|en|dated|humorous}} The [[skin]].
 
