t+az:[[nəyin bahasına olursa olsun]] ([[WT:EDIT|Assisted]]) <whatever it takes#53735181>

--- a/en/w/whatever it takes.775539.wikitext
+++ b/en/w/whatever it takes.775539.wikitext
@@ -14,6 +14,7 @@
 
 ====Translations====
 {{trans-top|anything required to achieve an objective}}
+* Azerbaijani: {{t|az|nəyin bahasına olursa olsun}}
 * French: {{t|fr|tout ce qui est nécessaire}}
 * Italian: {{t|it|ad ogni costo}}
 * Portuguese: {{t|pt|custe o que custar}}
