--- a/en/o/odd one out.742292.wikitext
+++ b/en/o/odd one out.742292.wikitext
@@ -7,10 +7,10 @@
 * {{audio|En-au-odd one out.ogg|Audio (AU)|lang=en}}
 
 ===Noun===
-{{en-noun|odd ones out}}
+{{en-noun|~|odd ones out}}
 
-# {{lb|en|idiomatic}} Something or someone in a group that is [[different]] or [[exceptional]], that does not [[fit]].
-# {{lb|en|idiomatic}} A [[visual]] [[puzzle]] where the [[guesser]] has to choose which word/picture/symbol etc. does not fit with the others.
+# {{lb|en|countable}} Something or someone in a group that is [[different]] or [[exceptional]], that does not [[fit]].
+# {{lb|en|uncountable}} A [[visual]] [[puzzle]] where the [[guesser]] has to choose which word/picture/symbol etc. does not fit with the others.
 
 ====Synonyms====
 * See [[Thesaurus:outcast]]
