--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -23,14 +23,14 @@ From {{inh|en|enm|oter}}, {{m|enm|otir}}, {{m|enm|otur}}, {{m|enm|otyre}}, from 
 {{rel-top|terms derived from otter (mammal)}}
 * {{l|en|European otter}} (''{{ll|mul|Lutra lutra}}'')
 * [[giant otter]]
-* {{vern|marine otter}}
+* {{vern|marine otter}} ({{taxlink|Lontra felina|species|ver=190723}})
 * {{l|en|otterless}}
 * {{l|en|otterish}}
 * {{l|en|otterlike}}
 {{rel-mid}}
 * {{l|en|Otter Tail County}}
 * {{l|en|ottery}}
-* {{l|en|river otter}} (''{{ll|mul|Londra}}'' spp.)
+* {{l|en|river otter}} (''{{ll|mul|Lontra}}'' spp.)
 * {{l|en|sea otter}} (''{{ll|mul|Enhydra lutris}}'')
 {{rel-bottom}}
 
