/* Verb */ +cite <bound#53741688>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -170,8 +170,10 @@ From {{inh|en|enm|bounden}}, from the noun (see above).
 {{en-verb}}
 
 # To [[surround]] a territory or other geographical entity.
-#: ''France, Portugal, Gibraltar and Andorra '''bound''' Spain.
-#: ''Kansas is '''bounded''' by Nebraska on the north, Missouri on the east, Oklahoma on the south and Colorado on the west.
+#: {{ux|en|France, Portugal, Gibraltar and Andorra '''bound''' Spain.}}
+#: {{ux|en|Kansas is '''bounded''' by Nebraska on the north, Missouri on the east, Oklahoma on the south and Colorado on the west.}}
+#* {{quote-book|en|title=Appleton's Guide to Mexico|author=Alfred Ronald Conkling|year=1884|page=[[:s:Appleton's Guide to Mexico/Chapters 1to4|25]]
+|passage=Mexico is '''bounded''' ''on the north'' by the United States of America, whose frontier is marked as follows: from the mouth of the Rio Bravo, or Rio Grande del Norte, following the course of the river to the parallel of 31° 47'; {{...}}}}
 # {{lb|en|mathematics}} To be the [[boundary]] of.
 
 =====Derived terms=====
