t+ru:[[ласка]] ([[WT:EDIT|Assisted]]) <weasel#53757128>

--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -129,6 +129,7 @@ From {{inh|en|enm|wesele}}, from {{inh|en|ang|weosule}}, from {{inh|en|gem-pro|*
 * Navajo: {{t|nv|dlǫ́ʼii}}
 * Portuguese: {{t+|pt|doninha|f}}
 * Quechua: {{t+|qu|achuqalla}}
+* Russian: {{t+|ru|ласка|f|tr=laska}}
 * Scottish Gaelic: {{t|gd|neas|f}}
 * Volapük: {{qualifier|♂♀}} {{t|vo|visaf}}
 * West Frisian: {{t|fy|marter|c}}
