t+uk:[[ласиця]] t+uk:[[ласка]] t-balance ([[WT:EDIT|Assisted]]) <weasel#53757180>

--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -107,7 +107,7 @@ From {{inh|en|enm|wesele}}, from {{inh|en|ang|weosule}}, from {{inh|en|gem-pro|*
 * Tagalog: {{t|tl|mustela}}
 * Thai: {{t|th|เพียงพอน}}
 * Turkish: {{t+|tr|gelincik}}
-* Ukrainian: {{t|uk|ла́ска|f}}
+* Ukrainian: {{t|uk|ла́ска|f}}, {{t|uk|ла́сиця|f}}
 * Volapük: {{qualifier|♂♀}} {{t|vo|visaf}}
 * Walloon: {{t+|wa|marcote|f}}, {{t+|wa|bascolete|f}}
 * Welsh: {{t|cy|gwenci|f}}, {{t|cy|bronwen|f}}
@@ -123,14 +123,15 @@ From {{inh|en|enm|wesele}}, from {{inh|en|ang|weosule}}, from {{inh|en|gem-pro|*
 * Hungarian: {{t+|hu|menyét}}
 * Indonesian: {{t+|id|cerpelai}}
 * Japanese: {{t-needed|ja}}
-{{trans-mid}}
 * Latvian: {{t|lv|sermulis|m}}, {{t|lv|zebiekste}}
+{{trans-mid}}
 * Maori: {{t|mi|wītara}}, {{t|mi|wīhara}}, {{t|mi|tori uaroa}}
 * Navajo: {{t|nv|dlǫ́ʼii}}
 * Portuguese: {{t+|pt|doninha|f}}
 * Quechua: {{t+|qu|achuqalla}}
 * Russian: {{t+|ru|ла́ска|f}}
 * Scottish Gaelic: {{t|gd|neas|f}}
+* Ukrainian: {{t|uk|ла́ска|f}}, {{t|uk|ла́сиця|f}}
 * Volapük: {{qualifier|♂♀}} {{t|vo|visaf}}
 * West Frisian: {{t|fy|marter|c}}
 {{trans-bottom}}
