--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -34,7 +34,10 @@ From {{inh|en|enm|wesele}}, from {{inh|en|ang|weosule}}, from {{inh|en|gem-pro|*
 * {{l|en|mammal|carnivorous mammal}}
 
 ====Hyponyms====
+* {{l|en|least weasel}}
+* {{l|en|mountain weasel}}
 * {{l|en|short-tailed weasel}}
+* {{l|en|Siberian weasel}}
 
 ====Derived terms====
 * {{l|en|iceweasel}}
