--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -594,7 +594,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blōwan}}, from {{inh|en|gem-pro|*
 ====Verb====
 {{en-verb|blows|blowing|blew|blown}}
 
-# to [[blossom]]; to cause to [[bloom]] or blossom
+# To [[blossom]]; to cause to [[bloom]] or blossom.
 #* '''1599''', [[w:William Shakespeare|William Shakespeare]], ''[[w:Much Ado About Nothing|Much Ado About Nothing]]'', [[s:Much Ado About Nothing (Shakespeare)|Act 4 Scene 1]]
 #*: You seem to me as [[w:Diana (mythology)|Dian]] in her [[orb]],
 #*: As chaste as is the bud [[ere]] it be '''blown''';
@@ -614,10 +614,10 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blōwan}}, from {{inh|en|gem-pro|*
 ====Noun====
 {{en-noun}}
 
-# a mass or display of flowers; a yield
+# A mass or display of flowers; a [[yield]].
 #* {{quote-journal|lang=en|1710|{{w|Joseph Addison}}|From my own apartment, August 29|The Tatler|https://quod.lib.umich.edu/e/ecco/004786805.0001.000|181|he could shew me such a '''blow''' of tulips as was not to be matched in the whole country.}}
-# a display of anything [[brilliant]] or [[bright]]
-# a [[bloom]], state of [[flowering]]
+# A display of anything [[brilliant]] or [[bright]].
+# A [[bloom]], state of [[flowering]].
 #: {{ux|en|roses in full '''blow'''.}}
 
 =====Related terms=====
