--- a/en/b/Bosphorus.776975.wikitext
+++ b/en/b/Bosphorus.776975.wikitext
@@ -10,8 +10,10 @@
 From medieval {{etyl|la|en}} {{m|la|Bosphorus}}, from {{etyl|grc|en}} {{m|grc|Βόσπορος}}.
 
 ===Pronunciation===
-* {{a|UK}} {{IPA|/ˈbɒs.fəɹ.əs/|/ˈbɒs.pəɹ.əs/|lang=en}}
-* {{a|US}} {{IPA|/ˈbɑs.fɚ.əs/|/ˈbɑs.pɚ.əs/|lang=en}}
+* {{a|RP}} {{IPA|en|/ˈbɒs.fəɹ.əs/|/ˈbɒs.pəɹ.əs/}}
+* {{a|GA}} {{IPA|en|/ˈbɑs.fɚ.əs/|/ˈbɑs.pɚ.əs/}}
+* {{rhymes|en|ɒspəɹəs}}
+* {{hyph|en|Bos|pho|rus}}
 
 ===Proper noun===
 {{en-proper noun}}
