--- a/en/c/CD-ROM.26226.wikitext
+++ b/en/c/CD-ROM.26226.wikitext
@@ -16,6 +16,7 @@
 
 ====Translations====
 {{trans-top|CD-ROM}}
+* Dutch: {{t+|nl|cd-rom|m}}
 * Esperanto: {{t|eo|KD-NLM}}
 * Finnish: {{t|fi|CD-ROM-levy}}, {{t|fi|CD-ROM}}
 * French: {{t+|fr|cédérom|m}}
