--- a/en/u/uniformize.776390.wikitext
+++ b/en/u/uniformize.776390.wikitext
@@ -27,6 +27,7 @@
 {{trans-top|to make uniform}}
 * French: {{t+|fr|uniformiser}}
 {{trans-mid}}
+* Spanish: {{t+|es|uniformar}}
 {{trans-bottom}}
 
 ====See also====
