--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -107,6 +107,7 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 {{trans-top|To stake or pledge upon the outcome of an event}}
 * Albanian: {{t-needed|sq}}
 * Arabic: {{t|ar|رَاهَنَ}}
+*: Egyptian Arabic: {{t|arz|راهن|tr=rāhin}}
 * Basque: {{t|eu|apustu egin}}
 * Breton: {{t|br|klaoustreañ}}
 * Bulgarian: {{t|bg|обзалагам се}}, {{t|bg|басирам се}}
