/* English */ Adding pronunciation. <Transnistria#53827883>

--- a/en/t/Transnistria.741376.wikitext
+++ b/en/t/Transnistria.741376.wikitext
@@ -5,6 +5,9 @@
 ===Etymology===
 From {{bor|en|ro|Transnistria}}, from {{der|en|la|trans}} + {{der|en|ro|Nistru|t=Dniester}} + {{m|ro|-ia}}: literally “beyond the river [[Dniester]]”. {{etystub|lang=en}}
 
+===Pronunciation===
+*{{enPR|trănz-nĭsʹtrē'ə}}, {{IPA|en|/tɹænzˈnɪsˌtɹi.ə/}}
+
 ===Proper noun===
 {{en-proper noun}}
 
