--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -386,6 +386,7 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare {{cog|dum|bobbe||b
 * German: {{t+|de|blubbern}}
 * Greek: {{t+|el|χοχλάζω}}
 *: Ancient Greek: {{t|grc|παφλάζω}}
+* Hebrew: {{t|he|פעפוע}} (pipua')
 * Hungarian: {{t+|hu|buborékol}}, {{t+|hu|bugyborékol}}
 * Ido: {{t+|io|ebuliar}}, {{t+|io|ebulieskar}}
 * Khmer: {{t|km|បែកពពុះ|tr=baek pɔpuh|sc=Khmr}}
