--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -41,6 +41,7 @@ From {{inh|en|enm|rotten}}, {{m|enm|roten}}, from {{inh|en|ang|rotian||to rot, b
 ====Translations====
 {{trans-top|to decay}}
 * Arabic: {{t|ar|أَفْسَدَ}}, {{t|ar|فَسَدَ}}
+*: Gulf Arabic: {{t|afb|خاس|tr=ḵās}}
 *: Moroccan Arabic: {{t|ary|خْمج|tr=ḵməj}}
 * Armenian: {{t+|hy|փտել}}, {{t+|hy|նեխել}}
 * Assamese: {{t|as|গেলা}}
