t+gl:[[entón]] t+gl:[[daquela]] ([[WT:EDIT|Assisted]]) <then#53841823>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -71,6 +71,7 @@ From {{inh|en|enm|[[then]]([[thenne|ne]])}}, {{m|enm|[[than]]([[thanne|ne]])}}, 
 * Esperanto: {{t+|eo|tiam}}
 * Finnish: {{t+|fi|silloin}}
 * French: {{t+|fr|alors}}, [[à]] [[cette]] [[époque]]-{{t+|fr|là}}
+* Galician: {{t|gl|entón}}, {{t|gl|daquela}}
 * Georgian: {{t+|ka|მაშინ}}
 * German: {{t+|de|dann}}, {{t+|de|damals}}
 * Greek: {{t+|el|τότε}}
