t+gl:[[tamén]] ([[WT:EDIT|Assisted]]) <then#53841828>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -298,6 +298,7 @@ From {{inh|en|enm|[[then]]([[thenne|ne]])}}, {{m|enm|[[than]]([[thanne|ne]])}}, 
 * Esperanto: {{t+|eo|tamen}}
 * Finnish: {{t+|fi|toisaalta}}
 * French: {{t+|fr|cependant}}, {{t+|fr|en même temps}}
+* Galician: {{t|gl|tamén}}
 * Georgian: {{t-needed|ka}}
 * German: {{t+|de|genauso}}, {{t+|de|gleichermaßen}}
 * Hungarian: {{t+|hu|ugyanakkor}}, {{t+|hu|viszont}}, {{t+|hu|másfelől}}, {{t+|hu|másrészt}}
