t+uk:[[розділ]] t+uk:[[поділ]] t+uk:[[ділення]] t+uk:[[частина]] t+uk:[[частка]] t+uk:[[відділ]] t+uk:[[відділення]] t+uk:[[підрозділ]] t+uk:[[розбіжність]] ([[WT:EDIT|Assisted]]) <division#53842481>

--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -120,6 +120,7 @@ From {{inh|en|enm|divisioun}}, from {{der|en|fro|division}}, from {{der|en|la|di
 * Swedish: {{t+|sv|division|c}}
 * Telugu: {{t+|te|విభజన}}
 * Turkish: {{t+|tr|bölme}}, {{t+|tr|bölüm}}
+* Ukrainian: {{t|uk|ро́зділ}}, {{t|uk|по́діл}}, {{t|uk|ді́лення}}
 * Urdu: {{t|ur|تقسیم|f|tr=taqsīm|sc=ur-Arab}}
 * West Frisian: {{t|fy|yndieling|c}}
 {{trans-bottom}}
@@ -151,6 +152,7 @@ From {{inh|en|enm|divisioun}}, from {{der|en|fro|division}}, from {{der|en|la|di
 * Russian: {{t+|ru|часть|f}}, {{t+|ru|разде́л|m}}
 * Spanish: {{t+|es|parte|f}}
 * Turkish: {{t+|tr|bölüm}}, {{t+|tr|pay}}
+* Ukrainian: {{t+|uk|части́на|f}}, {{t+|uk|ча́стка}}
 * West Frisian: {{t|fy|ôfdieling|c}}
 {{trans-bottom}}
 
@@ -246,6 +248,7 @@ From {{inh|en|enm|divisioun}}, from {{der|en|fro|division}}, from {{der|en|la|di
 * Swedish: {{t+|sv|division|c}}
 * Tagalog: {{t|tl|palahatian}}
 * Turkish: {{t+|tr|bölme}}, {{t+|tr|bölme işlemi}}
+* Ukrainian: {{t|uk|ді́лення|n}}
 * Urdu: {{t|ur|تقسیم|f|tr=taqsīm|sc=ur-Arab}}
 * West Frisian: {{t|fy|dieling|c}}
 {{trans-bottom}}
@@ -327,6 +330,7 @@ From {{inh|en|enm|divisioun}}, from {{der|en|fro|division}}, from {{der|en|la|di
 * Russian: {{t+|ru|отде́л|m}}, {{t+|ru|отделе́ние|n}}, {{t+|ru|се́кция|f}}, {{t+|ru|подразделе́ние|n}}
 * Swedish: {{t+|sv|division|c}}
 * Telugu: {{t+|te|విభాగము|sc=Telu}}
+* Ukrainian: {{t|uk|ві́дділ|m}}, {{t|uk|відді́лення|n}}, {{t+|uk|підро́зділ|m}}
 * Welsh: {{t+|cy|adran|f}}
 * West Frisian: {{t|fy|divyzje|c}}
 {{trans-bottom}}
@@ -354,6 +358,7 @@ From {{inh|en|enm|divisioun}}, from {{der|en|fro|division}}, from {{der|en|la|di
 * Macedonian: {{t|mk|поделеност|f}}
 {{trans-mid}}
 * Turkish: {{t+|tr|anlaşmazlık}}
+* Ukrainian: {{t|uk|розбі́жність|f}}, {{t|uk|по́діл|m}}, {{t|uk|ро́зділ|m}}
 * West Frisian: {{t|fy|ôfstimming|c}}
 {{trans-bottom}}
 
