--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -120,7 +120,7 @@ From {{inh|en|enm|divisioun}}, from {{der|en|fro|division}}, from {{der|en|la|di
 * Swedish: {{t+|sv|division|c}}
 * Telugu: {{t+|te|విభజన}}
 * Turkish: {{t+|tr|bölme}}, {{t+|tr|bölüm}}
-* Ukrainian: {{t|uk|ро́зділ}}, {{t|uk|по́діл}}, {{t|uk|ді́лення}}
+* Ukrainian: {{t|uk|ро́зділ}}, {{t|uk|по́діл}}, {{t|uk|ді́лення}}, {{t|uk|розді́лення|n}}
 * Urdu: {{t|ur|تقسیم|f|tr=taqsīm|sc=ur-Arab}}
 * West Frisian: {{t|fy|yndieling|c}}
 {{trans-bottom}}
