--- a/en/m/malam.4517.wikitext
+++ b/en/m/malam.4517.wikitext
@@ -39,16 +39,25 @@ A clipping of {{m|ha|malami}}.
 ===Pronunciation===
 * {{IPA|/ˈmalam/|lang=id}}
 
+===Etymology 1===
+
 ===Noun===
 {{id-noun}}
 
 # [[night]]
-# [[wax]]
 
 ===See also===
 * {{l|id|pasar}}
 * {{l|id|besar}}
 * {{w|Pasar Malam Besar}}
+
+===Etymology 2===
+Borrowed from {{bor|id|jv|ꦩꦭꦩ꧀}}
+
+===Noun===
+{{id-noun}}
+
+# [[wax]], [[paraffin]], particularly for making [[batik]]
 
 ----
 
