--- a/en/f/FOIL.26230.wikitext
+++ b/en/f/FOIL.26230.wikitext
@@ -11,7 +11,7 @@ See ''[[foil]]''
 ===Proper noun===
 {{en-proper noun}}
 
-# A particular mnemonic [[algorithm]] for [[multiply]]ing two [[binomial]]s.
+# {{lb|en|mnemonic}} {{n-g|An acronym for the [[algorithm]] for [[multiply]]ing two [[binomial]]s.
 
 ====Further reading====
 * {{projectlink|wikipedia|FOIL method}}
