--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -266,7 +266,7 @@ From {{inh|en|enm|binden}}, from {{inh|en|ang|bindan}}, from {{inh|en|gem-pro|*b
 ==Albanian==
 
 ===Etymology===
-From {{der|sq|sqj-pro|*bind-}}, from {{der|sq|ine-pro|*bʰeydʰ-}} 'to persuade, encourage; constrain'. Cognate to {{cog|grc|πείθω||to persuade, convince}}<ref> Albanische Etymologien (Untersuchungen zum albanischen Erbwortschatz), Bardhyl Demiraj, Leiden Studies in Indo-European 7; Amsterdam - Atlanta 1997, p.101</ref>, Illyrian {{m|xil|*Bindus||Illyrian Neptune}} and Thracian {{m|xth|Bithus||theonym}}.
+From {{der|sq|sqj-pro|*bind-}}, from {{der|sq|ine-pro|*bʰeydʰ-}} 'to persuade, encourage; constrain'. Cognate to {{cog|grc|πείθω||to persuade, convince}}<ref> Albanische Etymologien (Untersuchungen zum albanischen Erbwortschatz), Bardhyl Demiraj, Leiden Studies in Indo-European 7; Amsterdam - Atlanta 1997, p.101</ref>, {{cog|xil|*Bindus||Illyrian Neptune}} and {{cog|txh|Bithus||theonym}}.
 
 ===Verb===
 {{sq-verb|binda|bindur}}
