--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -295,6 +295,7 @@ From {{der|en|enm|benden}}, from {{der|en|ang|bendan||to bind or bend (a bow), f
 * Dutch: {{t+|nl|bocht|m}}
 * Finnish: {{t+|fi|mutka}}
 * French: {{t+|fr|virage|m}}
+* Galician: {{t+|gl|volta|f}}, {{t+|gl|curva|f}}
 * German: {{t+|de|Kurve|f}}, {{t+|de|Biegung|f}}
 * Greek: {{t+|el|στροφή|f}}
 *: Ancient: {{t|grc|καμπή|f}}
