--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -656,7 +656,7 @@ Possibly from {{inh|ojp|jpx-pro|sort=つき|*tuku}}.
 =====Derived terms=====
 * {{m|ojp|月日|tr=tukupi<sub>1</sub>}}
 * {{m|ojp|月夜|tr=tukuyo<sub>1</sub>}}
-* {{m|ojp|月讀}}, {{m|ojp|月夜見|tr=Tukuyo<sub>1</sub>mi<sub>1</sub>}}
+* {{m|ojp|月讀|tr=tukuyo<sub>2</sub>mi<sub>1</sub>}}
 
 ----
 
