--- a/en/c/countdown.34096.wikitext
+++ b/en/c/countdown.34096.wikitext
@@ -21,6 +21,7 @@ From {{compound|en|count|down}}.
 
 ====Translations====
 {{trans-top|a count backward to the time of some event}}
+* Arabic: {{t|ar|عَدٌّ تَنَازُلِيٌّ|m}}
 * Bulgarian: {{t|bg|отброяване|n|tr=otbrojavane}}
 * Chinese:
 *: Mandarin: {{t+|cmn|倒數|sc=Hani}}, {{t+|cmn|倒数|tr=dàoshǔ|sc=Hani}}, {{t+|cmn|倒計時}}, {{t+|cmn|倒计时|tr=dàojìshí}}
