--- a/en/c/Camelus dromedarius.34060.wikitext
+++ b/en/c/Camelus dromedarius.34060.wikitext
@@ -1,9 +1,12 @@
 ==Translingual==
 [[File:07. Camel Profile, near Silverton, NSW, 07.07.2007.jpg|thumb|''[[Camelus dromedarius]]'']]
-{{wikipedia}}
-{{wikispecies}}
 
 ===Proper noun===
 {{taxoninfl|i=1|g=m|head=[[Camelus]] {{epinew|dromedarius||la}}}}
 
 # {{taxon|species|family|Camelidae|the [[dromedary]], a [[camel]] native to northern Africa and western Asia, the best-known member of the camel family}}
+
+===References===
+* {{pedia|i=1}}
+* {{specieslite|i=1}}
+* {{comcatlite|i=1}}
