--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -111,6 +111,7 @@ From {{der|en|enm|furet}}, {{m|enm|ferret}}, from {{der|en|fro|furet}}, from {{d
 * French: {{t+|fr|fureter}}, {{t+|fr|fouiner}}, {{t+|fr|débusquer}}, {{t+|fr|découvrir}}, {{t+|fr|dénicher}}
 {{trans-mid}}
 * Maori: {{t|mi|paraketu}}
+* Spanish: {{t+|es|buscar}}, {{t+|es|rebuscar}}, {{t+|es|fisgonear}}
 {{trans-bottom}}
 
 ===Etymology 2===
