when -ous or -ious is added to a word ending in -our, the u is dropped (labour -> laborious, rigour -> rigorous, glamour -> glamorous, humour -> humorous ); see the corresponding entries in UK dictionaries (Oxford, Cambridge, Macmillan, Collins, Chambers, Longman) <labourious#53901922>

--- a/en/l/labourious.803568.wikitext
+++ b/en/l/labourious.803568.wikitext
@@ -3,4 +3,4 @@
 ===Adjective===
 {{head|en|adjective}}
 
-# {{alternative form of|from=UK|laborious|lang=en}}
+# {{misspelling of|laborious|lang=en}}
