--- a/en/a/apparent brightness.855921.wikitext
+++ b/en/a/apparent brightness.855921.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia}}
 
 ===Noun===
-{{en-noun|apparent brightnesses}}
+{{en-noun|~|es}}
 
 # {{lb|en|astronomy}} The [[brightness]] of a star as measured by an [[observer]], as opposed to its [[intrinsic brightness]] when corrected for distance or absorption.
 
