--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -107,7 +107,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Afrikaans: {{t|af|ding}}
 * Albanian: {{t+|sq|send|m}}
 * Amharic: {{t|am|ነገር|sc=Ethi}}
-* Arabic: {{t+|ar|شَيْء|m}}
+* Arabic: {{t+|ar|شَيْء|m}}, {{t+|ar|أمر|m|tr=ʾamr}}
 *: Egyptian Arabic: {{t|arz|شيء|m|tr=šeʾ|sc=Arab}}, {{t|arz|حاجة|f|tr=ḥaga|sc=Arab}}
 *: Hijazi Arabic: {{t|acw|شي|m|tr=šay|sc=Arab}}, {{t|acw|حاجة|f|tr=ḥāja|sc=Arab}}
 * Aragonese: {{t|an|cosa|f}}
