t+cdo:[[乇]] t+cmn:[[物]] t-balance t+hak:[[東西]] t+hak:[[东西]] t+cjy:[[東西]] t+cjy:[[东西]] t+hsn:[[東西]] t+hsn:[[东西]] t+cu:[[вѣщь]] ([[WT:EDIT|Assisted]]) <thing#53908252>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -128,9 +128,13 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Chinese:
 *: Cantonese: {{t|yue|嘢|tr=je5}}, {{t|yue|事物|tr=si6 mat6}}
 *: Dungan: {{t|dng|дунщи}}, {{t|dng|вәҗян}}
-*: Mandarin: {{t+|cmn|東西}}, {{t+|cmn|东西|tr=dōngxi}}, {{t+|cmn|事物|tr=shìwù}}, {{t+|cmn|物件|tr=wùjiàn}}
+*: Hakka: {{t|hak|東西}}, {{t|hak|东西|tr=tûng-sî}}
+*: Jin: {{t|cjy|東西}}, {{t|cjy|东西|tr=dung1 xi3}}
+*: Mandarin: {{t+|cmn|東西}}, {{t+|cmn|东西|tr=dōngxi}}, {{t+|cmn|事物|tr=shìwù}}, {{t+|cmn|物件|tr=wùjiàn}}, {{t+|cmn|物|tr=wù}} {{qualifier|literary}}
+*: Min Dong: {{t|cdo|乇|tr=nó̤h}}
 *: Min Nan: {{t+|nan|物件|tr=mi̍h-kiāⁿ, mn̍gh-kiāⁿ}}, {{t+|nan|代誌}}, {{t|nan|代志|tr=tāi-chì}}
 *: Wu: {{t|wuu|物事|tr= meq<sup>5</sup> zr}}
+*: Xiang: {{t|hsn|東西}}, {{t|hsn|东西|tr=dong1 si}}
 * Chuvash: {{t|cv|япала}}
 * Coptic:
 *: Bohairic: {{t|cop|ⲉⲛⲭⲁⲓ|m|tr=enxai}}
@@ -167,10 +171,10 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Korean: {{t+|ko|물건}}, {{t+|ko|것}}
 * Kyrgyz: {{t+|ky|нерсе|sc=Cyrl}}
 * Ladin: {{t|lld|cossa|f}}
+{{trans-mid}}
 * Ladino: {{t|lad|koza}}
 * Lao: {{t|lo|ສິ່ງ}}
 * Latin: {{t+|la|rēs|f}}, {{t+|la|ens|n}}
-{{trans-mid}}
 * Latvian: {{t|lv|lieta}}
 * Lithuanian: {{t+|lt|daiktas|m}}, {{t|lt|dalykas|m}}
 * Macedonian: {{t|mk|не́што|n}}, {{t|mk|ствар|f|sc=Cyrl}}
@@ -186,7 +190,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Norwegian: {{t+|no|ting|m}}, {{t|no|dings|m}}, {{t+|no|greie|f}}
 *: Nynorsk: {{t|nn|ting|m}}
 * Old Church Slavonic:
-*: Cyrillic: {{t|cu|вещь|f}}
+*: Cyrillic: {{t|cu|вещь|f}}, {{t|cu|вѣщь|f}}
 * Old English: {{t|ang|þing|n}}
 * Pali: {{t|pi|vatthu|n}}
 * Pashto: {{t|ps|شى|m|tr=šay}}, {{t|ps|څيز|m|tr=ciz}}
