t+yue:[[物件]] t+hak:[[物件]] t+wuu:[[物件]] ([[WT:EDIT|Assisted]]) <thing#53908270>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -126,14 +126,14 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Cebuano: {{t|ceb|butang}}
 * Chichewa: {{t|ny|chinthu}}
 * Chinese:
-*: Cantonese: {{t|yue|嘢|tr=je5}}, {{t|yue|事物|tr=si6 mat6}}
+*: Cantonese: {{t|yue|嘢|tr=je5}}, {{t|yue|事物|tr=si6 mat6}}, {{t|yue|物件|tr=mat6 gin6-2}}
 *: Dungan: {{t|dng|дунщи}}, {{t|dng|вәҗян}}
-*: Hakka: {{t|hak|東西}}, {{t|hak|东西|tr=tûng-sî}}
+*: Hakka: {{t|hak|東西}}, {{t|hak|东西|tr=tûng-sî}}, {{t|hak|物件|tr=vu̍t-khien / vu̍t-khian}}
 *: Jin: {{t|cjy|東西}}, {{t|cjy|东西|tr=dung1 xi3}}
 *: Mandarin: {{t+|cmn|東西}}, {{t+|cmn|东西|tr=dōngxi}}, {{t+|cmn|事物|tr=shìwù}}, {{t+|cmn|物件|tr=wùjiàn}}, {{t+|cmn|物|tr=wù}} {{qualifier|literary}}
 *: Min Dong: {{t|cdo|乇|tr=nó̤h}}
 *: Min Nan: {{t+|nan|物件|tr=mi̍h-kiāⁿ, mn̍gh-kiāⁿ}}, {{t+|nan|代誌}}, {{t|nan|代志|tr=tāi-chì}}
-*: Wu: {{t|wuu|物事|tr= meq<sup>5</sup> zr}}
+*: Wu: {{t|wuu|物事|tr= meq<sup>5</sup> zr}}, {{t|wuu|物件|tr=meq ji}}
 *: Xiang: {{t|hsn|東西}}, {{t|hsn|东西|tr=dong1 si}}
 * Chuvash: {{t|cv|япала}}
 * Coptic:
