--- a/en/d/dormouse.8238.wikitext
+++ b/en/d/dormouse.8238.wikitext
@@ -15,6 +15,7 @@ The word is sometimes considered to come from an {{cog|xno|-}} derivative of {{c
 {{en-noun|dormice}}
 
 # Any of several species of small, mostly [[European]] [[rodent]]s of the family [[Gliridae]]; also called [[Myoxidae]] or {{taxlink|Muscardinidae|family|noshow=1}} by some taxonomists.
+#* {{quote-book|en|year=1837| year_published= 1977 |page=237|title= {{w|Mauprat}} |author= {{w|George Sand}}|trans=Stanley Young|publisher=Cassandra Editions|url= https://books.google.co.nz/books?id=NTTeAwAAQBAJ |isbn= 9780897338677 |passage= For a long time the '''dormouse''' and polecat had seemed to him overfeeble enemies for his restless valour, even as the granary floor seemed to afford too narrow a field. Every day he read the papers of the previous day in the servants' hall of the houses he visited, and it appeared to him that this war in America, which was hailed as the awakening of the spirit of liberty and justice in the New World, ought to produce a revolution in France.}}
 # ''[[Glis glis]]'', the [[edible dormouse]]
 # {{lb|en|UK}} {{taxlink|Muscardinus avellanarius|species|noshow=1}}, the [[hazel dormouse]].
 # {{lb|en|figuratively}} A person who sleeps a great deal, or who falls asleep readily (by analogy with the sound hibernation of the dormouse).
