--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -12,8 +12,9 @@ From {{etyl|frm|en}} {{m|frm|pole||hen}} + {{m|en|cat}}. Origin unknown, possibl
 
 # A [[weasel]]-like animal of the genus {{m|mul|Mustela}}.
 ## notably, the [[European polecat]], {{m|mul|Mustela putorius}}.
-#* '''1919,''' {{w|Ronald Firbank}}, ''{{w|Valmouth}}'', Duckworth, hardback edition, page 61
-#*: By the little garden pergola open to the winds some fluttered peacocks were blotted nervelessly amid the dripping trees, their heads sunk back beneath their wings: while in the pergola itself, like a fallen storm-cloud, lolled a negress, her levelled, '''polecat''' eyes semi-veiled by the nebulous alchemy of the rainbow.
+#* {{quote-book|en|year=1837| year_published= 1977 |page=237|title= {{w|Mauprat}} |author= {{w|George Sand}}|trans=Stanley Young|publisher=Cassandra Editions|url= https://books.google.co.nz/books?id=NTTeAwAAQBAJ |isbn= 9780897338677 |passage= For a long time the dormouse and '''polecat''' had seemed to him overfeeble enemies for his restless valour, even as the granary floor seemed to afford too narrow a field. Every day he read the papers of the previous day in the servants' hall of the houses he visited, and it appeared to him that this war in America, which was hailed as the awakening of the spirit of liberty and justice in the New World, ought to produce a revolution in France.}}
+##* '''1919,''' {{w|Ronald Firbank}}, ''{{w|Valmouth}}'', Duckworth, hardback edition, page 61
+##*: By the little garden pergola open to the winds some fluttered peacocks were blotted nervelessly amid the dripping trees, their heads sunk back beneath their wings: while in the pergola itself, like a fallen storm-cloud, lolled a negress, her levelled, '''polecat''' eyes semi-veiled by the nebulous alchemy of the rainbow.
 # {{lb|en|US|dialect}} A [[skunk]].
 
 ====Synonyms====
