/* Translations */ Added Egyptian Arabic translation of this word. <rabbit#53910849>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -62,6 +62,7 @@ From {{inh|en|enm|rabet}}, from {{der|en|frm|-}} dialect (now found in {{cog|fr|
 * Apache:
 *: Western Apache: {{t|apw|gah}}
 * Arabic: {{t|ar|أرنب|m|alt=أَرْنَب}}
+*: Egyptian Arabic: {{t|arz|ارنب|m|tr=arnab}}
 * Armenian: {{t+|hy|ճագար|sc=Armn}}
 * Aromanian: {{t|rup|ljepuri|m}}, {{t+|rup|ljepure|m}}, {{t|rup|ljepur|m}}
 * Assamese: {{t|as|শহা}}, {{t|as|শহাপহু}}
