--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -251,7 +251,7 @@ From {{der|en|enm|beden}}, from the {{der|en|ang|-}} verb {{m|ang|bēodan||offer
 ==Afrikaans==
 
 ===Etymology===
-From {{inh|af|nl|bidden}}, from {{inh|af|dum|bidden}}, from {{inh|af|odt|bidden}}, from {{inh|af|gem-pro|*bidjaną||to ask}}, from {{inh|af|ine-pro|*gʷʰédʰyeti}}.
+From {{inh|af|nl|bidden}}.
 
 ===Pronunciation===
 * {{IPA|/bət/|[bət]|lang=af}}
@@ -264,9 +264,25 @@ From {{inh|af|nl|bidden}}, from {{inh|af|dum|bidden}}, from {{inh|af|odt|bidden}
 ===References===
 * 2007. [http://archive.phonetics.ucla.edu/ The UCLA Phonetics Lab Archive]. Los Angeles, CA: UCLA Department of Linguistics.
 
-[[Category:af:Religion]]
+{{c|af|Religion}}
 
 ----
+
+==Cimbrian==
+
+===Etymology===
+Related to {{cog|de|Weide||willow; wicker}}.
+
+===Noun===
+{{cim-noun|m|biddar|bìddale}} 
+
+# {{lb|cim|7}} [[wicker]], [[osier]]
+
+====Declension====
+{{cim-decl-noun|m|decl=1|bidde|biddar|biddarn}}
+
+===References===
+* {{R:Martalar1974}}
 
 ==Danish==
 
