--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -21,33 +21,33 @@ From {{der|en|enm|benden}}, from {{der|en|ang|bendan||to bind or bend (a bow), f
 # {{lb|en|intransitive}} To become [[curve]]d. <!--activity,accomplishment-->
 #: ''Look at the trees '''bending''' in the wind.''
 # {{lb|en|transitive}} To cause to change direction.
-#* {{rfdate|en|and other bibliographic particulars, eg, title of work, page, url}} {{w|John Milton}}
+#* {{rfdatek|John Milton}}
 #*: '''Bend''' thine ear to supplication.
-#* {{rfdate|en|and other bibliographic particulars, eg, title of work, page, url}} {{w|William Shakespeare}}
+#* {{rfdatek|William Shakespeare}}
 #*: Towards Coventry '''bend''' we our course.
-#* {{rfdate|en|and other bibliographic particulars, eg, title of work, page, url}} {{w|Walter Scott}}
+#* {{rfdatek|Walter Scott}}
 #*: '''bending''' her eyes {{...}} upon her parent
 # {{lb|en|intransitive}} To change direction. <!--state,activity-->
 #: ''The road '''bends''' to the right''
 # {{lb|en|intransitive}} To be inclined; to direct itself.
-#* {{rfdate|en|and other bibliographic particulars, eg, title of work, page, url}} {{w|John Milton}}
+#* {{rfdatek|John Milton}}
 #*: to whom our vows and wishes '''bend'''
 # {{lb|en|intransitive|usually|with "down"}} To [[stoop]].
 #: ''He '''bent''' down to pick up the pieces.''
 # {{lb|en|intransitive}} To [[bow]] in prayer, or in token of submission.
-#* {{rfdate|en|and other bibliographic particulars, eg, title of work, page, url}} {{w|Samuel Taylor Coleridge}}
+#* {{rfdatek|Samuel Taylor Coleridge}}
 #*: Each to his great Father '''bends'''.
 # {{lb|en|transitive}} To force to submit. <!--accomplishment,achievement-->
 #: ''They '''bent''' me to their will.''
-#* {{rfdate|en|and other bibliographic particulars, eg, title of work, page [or act, scene, line], url}} {{w|William Shakespeare}}
+#* {{rfdatek|William Shakespeare}}
 #*: except she '''bend''' her humour
 # {{lb|en|intransitive}} To submit.<!--state?,activity-->
 #: ''I am '''bending''' to my desire to eat junk food.''
 # {{lb|en|transitive}} To apply to a task or purpose.<!--state?,activity-->
 #: ''He '''bent''' the company's resources to gaining market share.''
-#* {{rfdate|en|and other bibliographic particulars, eg, title of work, page, url, full name of author}} {{w|Temple}}
+#* {{rfdatek|Temple}}
 #*: to '''bend''' his mind to any public business
-#* {{rfdate|en|and other bibliographic particulars, eg, title of work, page, url}} {{w|Alexander Pope}}
+#* {{rfdatek|Alexander Pope}}
 #*: when to mischief mortals '''bend''' their will
 # {{lb|en|intransitive}} To apply oneself to a task or purpose.<!--state?,activity-->
 #: ''He '''bent''' to the goal of gaining market share.''
