--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -114,7 +114,7 @@ From {{inh|en|enm|divisioun}}, from {{der|en|fro|division}}, from {{der|en|la|di
 * Romanian: {{t+|ro|divizare|f}}, {{t+|ro|împărțire|f}}
 * Russian: {{t+|ru|разде́л|m}}, {{t+|ru|деле́ние|n}}
 * Scots: {{t|sco|diveesion}}
-* Serbo-Croatian: {{t+|sh|podjela|f}}
+* Serbo-Croatian: {{t+|sh|podjela|f}}, {{t+|sh|dijeljenje|n}}
 * Slovene: {{t|sl|deljenje|n}}
 * Spanish: {{t+|es|división|f}}
 * Swahili: {{t+|sw|ugavi}}, {{t+|sw|farakano}}
