--- a/en/q/quadrant.4317.wikitext
+++ b/en/q/quadrant.4317.wikitext
@@ -94,12 +94,21 @@ Borrowed from {{bor|en|la|quadrantem}}, accusative singular of {{m|la|quadrāns|
 ==Catalan==
 
 ===Etymology===
-From {{etyl|la|ca}} {{m|la|quadrāns||fourth part of something, quarter}}.
+From {{der|ca|la|quadrāns||fourth part of something, quarter}}.
+
+===Pronunciation===
+* {{ca-IPA}}
 
 ===Noun===
 {{ca-noun|m}}
 
 # {{l|en|quadrant}}
+
+===Further reading===
+* {{R:IEC2}}
+* {{R:GDLC}}
+* {{R:DNV}}
+* {{R:DCVB}}
 
 ----
 
