Reverted edits by [[Special:Contributions/2409:4043:2595:D56:990E:5B06:6996:2F25|2409:4043:2595:D56:990E:5B06:6996:2F25]]. If you think this rollback is in error, please leave a message on my talk page. <odd one out#53949800>

--- a/en/o/odd one out.742292.wikitext
+++ b/en/o/odd one out.742292.wikitext
@@ -12,7 +12,8 @@
 # {{lb|en|countable}} Something or someone in a group that is [[different]] or [[exceptional]], that does not [[fit]].
 # {{lb|en|uncountable}} A [[visual]] [[puzzle]] where the [[guesser]] has to choose which word/picture/symbol etc. does not fit with the others.
 
-Pen
+====Synonyms====
+* See [[Thesaurus:outcast]]
 
 ====Translations====
 {{trans-top|misfit}}
