--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -21,8 +21,7 @@ From {{inh|en|enm|croke}}, {{m|enm|crok}}, from {{inh|en|ang|*crōc|t=hook, bend
 # A bending of the knee; a [[genuflection]].
 # A [[bent]] or curved part; a curving piece or portion (of anything).
 #: {{ux|en|the '''crook''' of a cane}}
-#* {{RQ:Chmbrs YngrSt|I}}
-#*: It was flood-tide along Fifth Avenue; motor, brougham, and victoria swept by on the glittering current; pretty women glanced out from limousine and tonneau; young men of his own type, silk-hatted, frock-coated, the '''crooks'' of their walking sticks tucked up under their left arms, passed on the Park side.
+#* {{RQ:Chambers Younger Set|chapter=His Own People|page=6|passage=It was flood-tide along Fifth Avenue; motor, brougham, and victoria swept by on the glittering current; pretty women glanced out from limousine and tonneau; young men of his own type, silk-hatted, frock-coated, the '''crooks''' of their walking sticks tucked up under their left arms, passed on the Park side.}}
 # {{lb|en|obsolete}} A [[lock]] or [[curl]] of hair.
 # {{lb|en|obsolete}} A [[gibbet]].
 #: {{rfquotek|Edmund Spenser}}
