t+rys:[[島]] t+xug:[[島]] t+mvi:[[島]] t+yoi:[[島]] ([[WT:EDIT|Assisted]]) <island#53966882>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -172,6 +172,7 @@ From earlier {{m|en|iland}}, from {{inh|en|enm|iland}}, {{m|enm|yland}}, {{m|enm
 * Korean: {{t+|ko|섬}}
 * Kumyk: {{t|kum|атав|tr=ataw|sc=Cyrl}}
 * Kuna: {{t|cuk|dupu}}
+* Kunigami: {{t|xug|島|tr=しまー, shimā}}
 * Kurdish:
 *: Kurmanji: {{t+|ku|girav|f|sc=ku-Arab}}
 *: Sorani: {{t|ckb|گراڤ|f|sc=ku-Arab}}
@@ -209,6 +210,7 @@ From earlier {{m|en|iland}}, from {{inh|en|enm|iland}}, {{m|enm|yland}}, {{m|enm
 *: Western Mari: {{t|mrj|ошмаоты}}
 * Mingrelian: {{t|xmf|კოკი}}
 * Mirandese: {{t|mwl|ilha|f}}
+* Miyako: {{t|mvi|島|tr=すま, suma}}
 * Mizo: {{t|lus|thliarkar}}
 * Mongolian: {{t+|mn|арал}}
 * Mwani: {{t|wmw|kisirwa}}
@@ -319,9 +321,10 @@ From earlier {{m|en|iland}}, from {{inh|en|enm|iland}}, {{m|enm|yland}}, {{m|enm
 * West Frisian: {{t+|fy|eilân|n}}
 * Wolof: {{t|wo|dun}}
 * Xhosa: {{t|xh|isiqithi|c7|c8}}
+* Yaeyama: {{t|rys|島|tr=しぃま, sïma}}
 * Yakut: {{t|sah|арыы}}
 * Yiddish: {{t|yi|אינדזל|m}}
-* Yonaguni: {{t|yoi|ダマ|tr=dama}}
+* Yonaguni: {{t|yoi|ダマ|tr=dama}}, {{t|yoi|島|tr=ちま, chima}}
 * Yoruba: {{t|yo|erékùṣù}}
 * Yup'ik: {{t|esu|qikertaq}}
 * Zazaki: {{t|zza|ada|f}}
