--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -501,7 +501,7 @@ Ultimately from {{etyl|la|en}} {{m|la|millesimum}}.
 # A [[line]] of [[three]] matching [[piece]]s in [[nine men's morris]] and related games.
 
 ===Etymology 4===
-{{back-formation|en|Millstone}}, a ''{{w|Magic: The Gathering}}'' card with this effect (first printed 1994).
+{{back-formation|en|millstone}}, name of a ''{{w|Magic: The Gathering}}'' card with this effect (first printed 1994).
 
 ====Alternative forms====
 * {{alter|en|Mill||in the sense of "a strategy"}}
