--- a/en/a/abandonar.4113.wikitext
+++ b/en/a/abandonar.4113.wikitext
@@ -76,6 +76,9 @@ Borrowed from {{bor|io|en|abandon}}, {{bor|io|fr|abandonner}}, {{bor|io|it|abban
 
 ==Ladino==
 
+===Alternative forms===
+* {{l|lad|אבאנדונאר}} <small>{{qualifier|Hebrew spelling}}</small>
+
 ===Verb===
 {{lad-verb|l}}
 
