--- a/en/a/abandonar.4113.wikitext
+++ b/en/a/abandonar.4113.wikitext
@@ -86,7 +86,8 @@ From {{der|lad|fro|abandoner}}, formed from {{m|fro|à|a|t=at, to}} + {{m|fro|ba
 ===Verb===
 {{lad-verb|l}}
 
-# to [[abandon]]
+# to [[abandon]], [[leave]]
+# to [[forsake]]
 
 ----
 
