--- a/en/m/mundo.4430.wikitext
+++ b/en/m/mundo.4430.wikitext
@@ -63,7 +63,8 @@ From Old Galician and {{inh|gl|roa-opt|mundo}}, from {{inh|gl|la|mundus}}.
 
 # [[world]]
 # a [[large]] [[quantity]]
-#: {{syn|gl|monte}}
+#: {{uxi|gl|Hai un '''mundo''' de xente a se manifestar en Hong Kong!|lit=There is a '''world''' of people demonstrating in Hong Kong!|There is a '''lot''' of people demonstrating in Hong Kong!}}
+#: {{syn|gl|feixe|morea|monte}}
 
 ===Etymology 2===
 From *''mũũdo'', from older ''muudo'', from {{inh|gl|VL.|mōlūtus}}, alternative past participle of {{m|la|molō}}.
