--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -22,6 +22,8 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 
 # Any of several intelligent [[mammalian]] species of the genus ''[[Sus]]'', having [[cloven]] [[hooves]], [[bristle]]s and a [[nose]] adapted for [[digging]]; especially the [[domestication|domesticated]] [[animal]] ''[[Sus scrofa]]''.
 #: {{ux|en|The man kept a pen with two '''pigs''' that he fed from carrots to cabbage.}}
+# A light [[pink]]ish-red [[colour]], like that of a pig (also called pig pink).
+#: {{color panel|FCD7DE}}
 # {{lb|en|specifically}} A young swine, a [[piglet]] {{qualifier|contrasted with a [[hog]], an adult swine}}.
 #* '''2005''' April, ''Live Swine from Canada, Investigation No. 731-TA-1076 (Final), publication 3766, April 2005, U.S. International Trade Commission'' {{ISBN|1457819899}}, page I-9:
 #*: Weanlings grow into feeder '''pigs''', and feeder '''pigs''' grow into slaughter hogs. {{...}} Ultimately the end use for virtually all '''pigs''' and hogs is to be slaughtered for the production of pork and other products.
