/* Related terms */ <blow#53984166>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -622,6 +622,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blōwan}}, from {{inh|en|gem-pro|*
 
 =====Related terms=====
 * {{l|en|ablow}}
+* {{l|en|elder-blow}}
 
 =====Translations=====
 {{trans-top|mass or display of flowers}}
