--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -6,8 +6,7 @@
 From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||to whistle}}, from {{inh|en|gem-pro|*hwistlōną||to make a hissing sound}}. Cognate with {{cog|is|hvísla|t=to whisper}}, {{cog|ru|свистеть|t=to whistle}}.
 
 ===Pronunciation===
-* {{a|UK}} {{IPA|/wɪsl̩/|lang=en}}, {{IPA|/ʍɪsl̩/|lang=en}}
-* {{a|US}} {{IPA|/wɪsl̩/|lang=en}}, {{IPA|/ʍɪsl̩/|lang=en}}
+* {{a|UK|US}} {{IPA|/wɪsl̩/|lang=en}}, {{IPA|/ʍɪsl̩/|lang=en}}
 * {{rhymes|ɪsəl|lang=en}}
 * {{audio|en-us-whistle.ogg|Audio (US)|lang=en}}
 
