--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -238,6 +238,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 * Finnish: {{t+|fi|punnus}}
 * French: {{t+|fr|poids|m}}
 * Greek: {{t+|el|ζύγι|n}}, {{t+|el|σταθμά|n-p}}, {{t|el|σταθμίον|n}}
+*: Ancient: {{t|grc|σταθμίον|n}}
 * Hebrew: {{t+|he|מִשְׁקֹלֶת|f|tr=mishqólet}}
 * Hungarian: {{t+|hu|súly}}
 * Japanese: {{t|ja|分銅|tr=fundō}}
