--- a/en/e/executive order.776982.wikitext
+++ b/en/e/executive order.776982.wikitext
@@ -9,7 +9,7 @@
 ====Translations====
 {{trans-top|decree issued on the authority of the executive branch of government}}
 * Chinese:
-*: Cantonese: {{t-needed|yue}}
+*: Cantonese: {{t|yue|行政命令|tr=hang4 zing3 ming6 ling6}}
 *: Mandarin: {{t+|cmn|行政命令|tr=xíngzhèng mìnglìng}}
 * Finnish: {{t+|fi|asetus}} (''closest equivalent'')
 * French: {{t+|fr|ordonnance|f}}
