--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -61,3 +61,4 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 {{trans-bottom}}
 
 [[Category:en:Nintendo]]
+[[Category:English trademarks]]
