--- a/en/w/what's good.801534.wikitext
+++ b/en/w/what's good.801534.wikitext
@@ -6,7 +6,8 @@
 ===Phrase===
 {{head|en|phrase|head=[[what]][['s]] [[good]]}}
 
-# {{lb|en|colloquial}} [[what]] [[is]] [[good]], especially in reference to food. {{rfex|lang=en}}
+# {{lb|en|colloquial}} [[what]] [[is]] [[good]], especially in reference to food.
+#: {{ux|en|'''What's good''' here? I'm way too indecisive to choose from a menu.}}
 # {{lb|en|slang}} [[what's up]]
 # {{lb|en|slang}} what is your problem (meant as a personal challenge to or means of calling out the addressee). Example: ''And now back to this bitch that had a lot to say about me the other day in the press. Miley, what's good?'' (Nicki Minaj to Miley Cyrus, August 30, 2015)
 
