t+ru:[[получить по первое число]] t+ru:[[получить нагоняй]] t+ru:[[получить взбучку]] ([[WT:EDIT|Assisted]]) <catch hell#54000175>

--- a/en/c/catch hell.802514.wikitext
+++ b/en/c/catch hell.802514.wikitext
@@ -26,4 +26,5 @@
 {{trans-top|to be scolded or chastised}}
 * French: {{qualifier|colloquial|France}} {{t+|fr|se faire appeler Arthur}}, {{qualifier|colloquial}} {{t+|fr|se faire sonner les cloches}}, {{qualifier|informal}} {{t+|fr|se faire tirer les oreilles}}, {{qualifier|France|informal}} {{t+|fr|se faire remonter les bretelles}}, {{qualifier|colloquial}} {{t|fr|[[se faire]] [[enguirlander]]}}
 {{trans-mid}}
+* Russian: {{t|ru|получить по первое число|pf}}, {{t|ru|получить нагоняй|pf}}, {{t|ru|получить взбучку|pf}}
 {{trans-bottom}}
