/* Translations */ edited using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]] <cauliflower#54007340>

--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -51,7 +51,7 @@ From 16th century {{m|en|cole-florye}}. Compare {{cog|la|caulis}}, {{cog|fr|chou
 * Greek: {{t+|el|κουνουπίδι|n}}
 *: Ancient: {{t|grc|κάνωπον|n}}
 * Greenlandic: {{t|kl|blomkåli}}
-* Hindi: {{t+|hi|फूल गोभी|sc=Deva}}
+* Hindi: {{t+|hi|गोभी|f|sc=Deva}}, {{t+|hi|गोबी|f}}, {{t|hi|फूल गोभी|f}}, {{t+|hi|कोबी|f}} {{qualifier|obsolete}}
 * Hungarian: {{t+|hu|karfiol}}
 * Icelandic: {{t+|is|blómkál|n}}
 * Ido: {{t+|io|florkaulo}}
@@ -91,6 +91,7 @@ From 16th century {{m|en|cole-florye}}. Compare {{cog|la|caulis}}, {{cog|fr|chou
 * Tagalog: {{t|tl|koliplor}}
 * Thai: {{t|th|กะหล่ำดอก}}, {{t|th|กะหล่ำต้น}}
 * Turkish: {{t+|tr|karnabahar}}
+* Urdu: {{t|ur|گوبی|tr=gobī}}, {{t|ur|گوبھی|tr=gobhī}}
 * Ukrainian: {{t|uk|кучеря́ва капу́ста|f|sc=Cyrl}}, {{t|uk|цвітна́ капу́ста|f|sc=Cyrl}}
 * Vietnamese: {{t|vi|bông cải trắng}}, {{t|vi|cải bông trắng}}, {{t|vi|cải hoa}}, {{t|vi|hoa lơ}}, {{t|vi|hoa lơ trắng}}, {{t|vi|su lơ}}, {{t|vi|súp lơ}}
 * Volapük: {{t+|vo|florabrasid}}
@@ -115,6 +116,7 @@ From 16th century {{m|en|cole-florye}}. Compare {{cog|la|caulis}}, {{cog|fr|chou
 * German: {{t+|de|Blumenkohl|m}}, {{t+|de|Karfiol|m}}
 * Greek: {{t+|el|κουνουπίδι|n}}
 * Greenlandic: {{t|kl|blomkåli}}
+* Hindi: {{t+|hi|गोभी|f|sc=Deva}}, {{t+|hi|गोबी|f}}, {{t|hi|फूल गोभी|f}}, {{t+|hi|कोबी|f}} {{qualifier|obsolete}}
 * Hungarian: {{t+|hu|karfiol}}
 * Icelandic: {{t+|is|blómkál|n}}
 * Indonesian: {{t+|id|kubis bunga}}
@@ -145,6 +147,7 @@ From 16th century {{m|en|cole-florye}}. Compare {{cog|la|caulis}}, {{cog|fr|chou
 * Swedish: {{t+|sv|blomkål|c}}
 * Tagalog: {{t|tl|koliplor}}
 * Turkish: {{t+|tr|karnabahar}}
+* Urdu: {{t|ur|گوبی|tr=gobī}}, {{t|ur|گوبھی|tr=gobhī}}
 * Ukrainian: {{t|uk|кучеря́ва капу́ста|f|sc=Cyrl}}, {{t|uk|цвітна́ капу́ста|f|sc=Cyrl}}, {{t|uk|капуста цвітна|f}}
 * Welsh: {{t+|cy|blodfresychen|f}}
 {{trans-bottom}}
@@ -155,7 +158,6 @@ From 16th century {{m|en|cole-florye}}. Compare {{cog|la|caulis}}, {{cog|fr|chou
 * Cornish: {{t-check|kw|cawlvlejen}}
 * Esperanto: {{t+check|eo|florbrasiko}}
 * {{ttbc|he}}: {{t+check|he|כרובית|f}} (kruvít)
-* {{ttbc|hi}}: {{t+check|hi|गोभी}} (gobhī)
 * {{ttbc|id}}: {{t+check|id|bungkul}}; [[kubis]] [[bunga]]
 * Latin: {{t+check|la|brassica|f}}
 * Maltese: {{t-check|mt|pastarda|f}}
@@ -170,7 +172,6 @@ From 16th century {{m|en|cole-florye}}. Compare {{cog|la|caulis}}, {{cog|fr|chou
 * {{ttbc|es}}: {{t+check|es|pella|f}} {{qualifier|Northern Spain|specifically Navarra|Spanish Basque Country|Aragon|and La Rioja}}
 * {{ttbc|th}}: {{t-check|th|ดอกกะหล่ำ}} (dòk gà-làm)
 * Turkish: {{t+check|tr|karnabahar}}
-* Urdu: {{t-check|ur|گوبی|tr=gobī}}, {{t-check|ur|گوبھی|tr=gobhī}}
 * Vietnamese: {{t-check|vi|hoa lơ}}, {{t-check|vi|hoa lơ trắng}}, {{t-check|vi|bông cải trắng}}
 * West Frisian: {{t+check|fy|blomkoal}}
 * Zulu: {{t-check|zu|ukholifulawa}}
