--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -7,7 +7,7 @@
 * {{rhymes|ɛt|lang=en}}
 
 ===Etymology 1===
-From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bætan||to make better}}; or from {{der|en|fro|abeter||to entice}}, from {{m|fro|a-||to}} + {{m|fro|beter||hound on, urge, to bait}}; but in either case ultimately from {{der|en|gem-pro|-}}.
+From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bætan||to make {{l|en|better}}}}; or from {{der|en|fro|abeter||to entice}}, from {{m|fro|a-||to}} + {{m|fro|beter||hound on, urge, to bait}}; but in either case ultimately from {{der|en|gem-pro|-}}. More at {{l|en|abet}}.
 
 ====Noun====
 {{en-noun}}
