--- a/en/r/real-life.741522.wikitext
+++ b/en/r/real-life.741522.wikitext
@@ -9,11 +9,4 @@
 |title=[http://www.economist.com/news/international/21580191-edward-snowdens-odyssey-leaves-america-nonplussed-and-its-allies-dismayed-russia-china Travels and travails]
 |passage=Even without hovering drones, a lurking assassin, a thumping score and a denouement, the '''real-life''' story of Edward Snowden, a rogue spy on the run, could be straight out of the cinema. But, as with Hollywood, the subplots and exotic locations may distract from the real message: America’s discomfort and its foes’ glee.}}
 
-====Translations====
-{{trans-top|not fictional}}
-* Chinese:
-*: Mandarin: {{t-needed|cmn}}
-{{trans-mid}}
-* Finnish: {{t+|fi|todellinen}}, {{t+|fi|tosi|alt=tosi-}}, {{t|fi|tosielämän}} {{q|genitive of a noun}}
-* Portuguese: {{t-needed|pt}}
-{{trans-bottom}}
+====The real life====
