--- a/en/w/w/o.26235.wikitext
+++ b/en/w/w/o.26235.wikitext
@@ -1,20 +1,19 @@
 {{also|Appendix:Variations of "wo"}}
 ==English==
 
-===Abbreviation===
-{{rfc-header|Abbreviation}}
-{{head|en|abbreviation}}
-
-# {{abbreviation of|without|lang=en}}
+===Verb===
+{{head|en|verb}}
 # {{lb|en|finance|insurance}} {{abbreviation of|write off|lang=en}}
 # {{lb|en|finance|insurance}} {{abbreviation of|write-off|lang=en}}
+
+===Noun===
+# {{lb|en|sport}} {{abbreviation of|walkover|lang=en}} {{lb|en|scheduling}} {{abbreviation of|[[week]] of|lang=en}}
+===Preposition===
+#: '''''w/o''' January 7th''
+=# {{abbreviation of|without|lang=en}}
 # {{abbreviation of|[[wife]] [[of]]|lang=en}}
 #: ''Sandy Steven, '''w/o''' Steven''
-# {{lb|en|sport}} {{abbreviation of|walkover|lang=en}}
-# {{lb|en|scheduling}} {{abbreviation of|[[week]] of|lang=en}}
-#: '''''w/o''' January 7th''
-
-====Related terms====
+==Related terms====
 * {{l|en|w/}}
 * {{l|en|w/i}}
 
