--- a/en/n/narsty.741126.wikitext
+++ b/en/n/narsty.741126.wikitext
@@ -4,7 +4,11 @@
 {{head|en|adjective}}
 
 # {{lb|en|nonstandard}} {{eye dialect of|nasty|lang=en}}
-#(ex-codependents' term) A dryer contraction of the adjective 'narcissistic'.
+#(ex-codependents' term) A colloquial term for the adjective 'narcissistic'.
+#
+#
+#
+#
 
 ===Anagrams===
 * {{anagrams|en|a=anrsty|strany|tyrans}}
