--- a/en/w/whistler.7356.wikitext
+++ b/en/w/whistler.7356.wikitext
@@ -16,7 +16,7 @@ From {{inh|en|enm|whisteler}}, {{m|enm|whistlar}}, {{m|enm|whystelare}}, from {{
 # A [[bird]] that whistles (applied regionally to various specific species).
 #* {{RQ:Spenser Faerie Queene|book=II|canto=XII|passage=The lether-winged Bat, dayes enimy, / The ruefull Strich, still waiting on the bere, / The '''Whistler''' shrill, that who so heares, doth dy {{...}}}}
 # The [[whistling marmot]] ({{taxlink|Marmota caligata|species|noshow=1|ver=160928}}).
-# The [[goldeneye]].
+# The [[goldeneye]] (certain ducks of genus ''[[Bucephala]]'').
 # The [[mountain beaver]] ({{taxlink|Aplodontia rufa|species|ver=190904}}).
 # An [[audio]]-[[frequency]] [[electromagnetic wave]] produced by [[atmospheric]] [[disturbance]]s such as [[lightning]].
 # A [[broken-winded]] [[horse]].
