--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -451,7 +451,7 @@ Borrowed from {{bor|sv|la|divisio|divisio, divisionis}}, noun of process form fr
 {{sv-noun|c}}
 
 # [[division#English|division]]; act of dividing (e.g. numbers); large military unit; section of a company
-# {{lb|sv|sports}} division, [[league]]; a organization of sports teams that habitually play against each other for a championship; the level on which a certain team plays, as compared to others
+# {{lb|sv|sports}} division, [[league]]; an organization of sports teams that habitually play against each other for a championship; the level on which a certain team plays, as compared to others
 
 ====Declension====
 {{sv-infl-noun-c-r|2=divisione}}
