--- a/en/a/adulterously.855996.wikitext
+++ b/en/a/adulterously.855996.wikitext
@@ -6,7 +6,7 @@
 ===Adverb===
 {{en-adv}}
 
-# In a [[adulterous]] manner.
+# In an [[adulterous]] manner.
 #: ''She was a home-wrecker, taking her pleasure '''adulterously'''.''
 
 ====Translations====
