--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -53,7 +53,7 @@ From {{inh|en|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}} {{m|fro|e
 * Bau Bidayuh: {{t|sne|pas}}
 * Belarusian: {{t|be|вавёрка|f}}
 * Breton: {{t+|br|gwiñver|m}}, {{t|br|kaz-koad|m}}
-* Brunei Malay: {{t|kxd|basing}}
+* Brunei Malay: {{t|kxd|basing}}, {{t|kxd|tupai}}
 * Bulgarian: {{t+|bg|ка́терица|f}}
 * Burmese: {{t+|my|ရှဉ့်|sc=Mymr}}
 * Catalan: {{t+|ca|esquirol|m}}
