--- a/en/p/prisoner of war.4326.wikitext
+++ b/en/p/prisoner of war.4326.wikitext
@@ -36,7 +36,7 @@
 * Italian: {{t|it|prigioniero di guerra|m}}
 * Japanese: {{t+|ja|捕虜|tr=ほりょ, horyo|sc=Jpan}}
 {{trans-mid}}
-* Korean: {{t|ko|전쟁 포로}}
+* Korean: {{t|ko|[[전쟁]] [[포로]]}}
 * Latin: {{t|la|dēditīcius|m}}
 * Malay: {{t|ms|tahanan perang}}
 * Navajo: {{t|nv|yisnááh}}
@@ -49,9 +49,9 @@
 * Slovak: [[zajatec]] {{g|m}} (''plural:'' zajatci)
 * Spanish: {{t|es|prisionero de guerra|m}}
 * Swedish: {{t+|sv|krigsfånge}}
-* Telugu: {{t|te|యుద్ధ ఖైదీ|tr=yuddha khaidee}}
+* Telugu: {{t|te|యుద్ధ ఖైదీ}}
 * Thai: {{t|th|เชลยศึก}}
-* Ukrainian: {{t+|uk|бранець|m|tr=bránec'}}, {{t|uk|військовополоне́ний|m}}, {{t|uk|полоне́ний|m}}
+* Ukrainian: {{t+|uk|бра́нець|m}}, {{t|uk|військовополоне́ний|m}}, {{t|uk|полоне́ний|m}}
 * Vietnamese: {{t+|vi|tù binh}}
 * Volapük: {{t|vo|kligafanäböpäb}}
 {{trans-bottom}}
