t+sq:[[rob lufte]] t+ko:[[포로]] t+tt:[[әсир]] t+ug:[[ئەسىر]] t+he:[[שבוי]] t+hi:[[युद्ध-बंदी]] t+hi:[[बंदी]] t-balance ([[WT:EDIT|Assisted]]) <prisoner of war#54087540>

--- a/en/p/prisoner of war.4326.wikitext
+++ b/en/p/prisoner of war.4326.wikitext
@@ -16,6 +16,7 @@
 
 ====Translations====
 {{trans-top|soldier or combatant captured by the enemy}}
+* Albanian: {{t|sq|rob lufte|m}}
 * Arabic: {{t|ar|أَسِير اَلْحَرْب|m}}, {{t|ar|أَسِير|m}}
 * Armenian: {{t+|hy|ռազմագերի}}
 * Belarusian: {{t|be|ваеннапало́нны}}, {{t|be|пало́нны|m}}
@@ -29,14 +30,16 @@
 * Georgian: {{t|ka|სამხედრო ტყვე}}
 * German: {{t+|de|Kriegsgefangener|m}}, {{t+|de|Kriegsgefangene|f}}
 * Greek: {{t|el|αιχμάλωτος πολέμου|m|f}}
+* Hebrew: {{t|he|שָׁבוּי|m|tr=shavúy}}
+* Hindi: {{t|hi|युद्ध-बंदी|m}}, {{t+|hi|बंदी|m}}
 * Hungarian: {{t+|hu|hadifogoly}}
 * Icelandic: {{t|is|stríðsfangi|m}}
 * Indonesian: {{t|id|tahanan perang}}
 * Interlingua: {{t|ia|prisionero de guerra}}
 * Italian: {{t|it|prigioniero di guerra|m}}
-* Japanese: {{t+|ja|捕虜|tr=ほりょ, horyo|sc=Jpan}}
 {{trans-mid}}
-* Korean: {{t|ko|[[전쟁]] [[포로]]}}
+* Japanese: {{t+|ja|捕虜|tr=ほりょ, horyo|sc=Jpan}}
+* Korean: {{t|ko|[[전쟁]] [[포로]]}}, {{t+|ko|포로}}
 * Latin: {{t|la|dēditīcius|m}}
 * Malay: {{t|ms|tahanan perang}}
 * Navajo: {{t|nv|yisnááh}}
@@ -49,9 +52,11 @@
 * Slovak: {{t|sk|zajatec|m}}
 * Spanish: {{t|es|prisionero de guerra|m}}
 * Swedish: {{t+|sv|krigsfånge}}
+* Tatar: {{t+|tt|әсир}}
 * Telugu: {{t|te|యుద్ధ ఖైదీ}}
 * Thai: {{t|th|เชลยศึก}}
 * Ukrainian: {{t+|uk|бра́нець|m}}, {{t|uk|військовополоне́ний|m}}, {{t|uk|полоне́ний|m}}
+* Uyghur: {{t|ug|ئەسىر}}
 * Vietnamese: {{t+|vi|tù binh}}
 * Volapük: {{t|vo|kligafanäböpäb}}
 {{trans-bottom}}
