--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -27,7 +27,7 @@ From {{inh|en|enm|sir}}, borrowed from {{bor|en|fro|sire||master, sir, lord}}, f
 ##: {{ux|en|'''Sir''', yes sir.}}
 ## to a [[teacher]].
 ##: {{ux|en|Here's my report, '''sir'''.}}
-# {{n-g|A respectful term of address to any [[male]], especially if his [[name]] or proper [[title]] is [[unknown]].}}
+# {{n-g|A respectful term of address to an  adult male (often older), especially if his [[name]] or proper [[title]] is [[unknown]].}}
 #: ''Excuse me, '''sir''', do you know the way to the art museum?''
 
 ====Coordinate terms====
