--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -127,7 +127,7 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 * Hebrew: {{t|he|התערב|tr=hit'arév}}
 * Hindi: {{t-needed|hi}}
 * Hungarian: {{t+|hu|fogad}}
-* Icelandic: {{t-needed|is}}
+* Icelandic: {{t+|is|veðja}}
 * Indonesian: {{t+|id|taruh}}
 {{trans-mid}}
 * Interlingue: {{t|ie|pariar}}
