--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -8,11 +8,11 @@
 From {{etyl|enm|en}} {{m|enm|thaugh}}, {{m|enm|thagh|}}, from {{etyl|ang|en}} {{m|ang|þēah||though, although, even if, that, however, nevertheless, yet, still; whether}}, later superseded in many dialects by {{etyl|enm|en}} {{m|enm|though}}, {{m|enm|thogh}}, from {{etyl|non|en}} {{m|non|*þóh}} (later {{m|non|þó}}); both from {{etyl|gem-pro|en}} {{m|gem-pro|*þauh||though}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*to-}}, suffixed with {{etyl|gem-pro|en}} {{m|gem-pro|*-hw}} &lt; {{etyl|ine-pro|en}} {{m|ine-pro|*-kʷe||and}}. Akin to Scots {{m|sco|thoch||though}}, {{cog|stq|dach||though}}, {{cog|fy|dôch}}, {{m|fy|dochs||though}}, {{cog|nl|doch||though}}, {{cog|de|doch||though}}, {{cog|sv|dock||however, still}}, {{cog|is|þó||though}}. More at [[that]].
 
 ===Pronunciation===
-* {{a|UK}} {{enPR|''th''ō}}, {{IPA|/ðəʊ/|lang=en}}
-* {{a|US}} {{enPR|''th''ō}},{{IPA|/ðoʊ/|lang=en}}
-* {{audio|en-us-though.ogg|Audio (US)|lang=en}}
-* {{audio|LL-Q1860 (eng)-Nattes à chat-though.wav|Audio|lang=en}}
-* {{rhymes|əʊ|lang=en}}
+* {{a|RP}} {{enPR|''th''ō}}, {{IPA|en|/ðəʊ/}}
+* {{audio|en|LL-Q1860 (eng)-Nattes à chat-though.wav|Audio (RP)}}
+* {{a|GA}} {{enPR|''th''ō}},{{IPA|en|/ðoʊ/}}
+* {{audio|en|En-us-though.ogg|Audio (GA)}}
+* {{rhymes|en|əʊ}}
 
 ===Adverb===
 {{en-adv|-}}
