--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -345,7 +345,7 @@ From earlier {{m|en|iland}}, from {{inh|en|enm|iland}}, {{m|enm|yland}}, {{m|enm
 * French: {{t+|fr|île|f}}
 * German: {{t-needed|de}}
 * Greek: {{t+|el|νησί|n}}, {{t+|el|νησίδα|f}}
-*: Ancient: {{t-needed|grc}}, {{t|grc|νῆσος|f}}
+*: Ancient: {{t-needed|grc}}
 * Hebrew: {{t+|he|אִי|tr=i|m|sc=Hebr}}
 * Hungarian: {{t+|hu|sziget}}
 * Icelandic: {{t+|is|eyja|f}}, {{t|is|eyland|n}}
