--- a/en/t/Transnistria.741376.wikitext
+++ b/en/t/Transnistria.741376.wikitext
@@ -12,12 +12,11 @@ From {{bor|en|ro|Transnistria}}, from {{der|en|la|trans}} + {{der|en|ro|Nistru|t
 {{en-proper noun}}
 
 # {{lb|en|historical}} A [[governorate]] of [[Romania]] during [[World War II]], established in 1941 and captured by Soviet forces in 1944.
-# An [[autonomous]] [[territory]] within [[Moldova]], not [[internationally]] [[recognized]] as a [[nation]].
+# {{lb|en|colloquial}} [[Romanian|Romanian]] name for an [[autonomous]] [[territory]] within [[Moldova]] (Stânga Nistrului); also sometimes for [[Pridnestrovie]], the territory along the Dniester river that not [[internationally]] [[recognized]] as a [[nation]], mostly in an abusive context.
 
 ====Synonyms====
 * {{l|en|Transdniestria}}
 * {{l|en|Trans-Dniester}}
-* {{l|en|Pridnestrovie}}
 
 ====Derived terms====
 * [[Transnistrian]]
@@ -64,7 +63,7 @@ From {{bor|en|ro|Transnistria}}, from {{der|en|la|trans}} + {{der|en|ro|Nistru|t
 * Portuguese: {{t+|pt|Transnístria|f}}
 * Romanian: {{t|ro|Transnistria|f}}
 *: Cyrillic: {{t|ro|Транснистриа|f|sc=Cyrl}}
-* Russian: {{t+|ru|Приднестро́вье|n}}
+* Russian: {{t+|ru|Транснистрия|n}}
 * Scots: {{t|sco|Transnistrie}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|Придњестровље|n|sc=Cyrl}}
@@ -73,7 +72,7 @@ From {{bor|en|ro|Transnistria}}, from {{der|en|la|trans}} + {{der|en|ro|Nistru|t
 * Slovene: {{t|sl|Transnistrija|f}}, {{t|sl|Pridnjestrovje|n}}
 * Spanish: {{t|es|Transnistria|f}}
 * Swedish: {{t+|sv|Transnistrien}}
-* Ukrainian: {{t|uk|Придністро́в'я|n}}
+* Ukrainian: {{t|uk|Трансністрия|n}}
 {{trans-bottom}}
 
 ====Further reading====
