/* Translations */ <think through#54107551>

--- a/en/t/think through.720293.wikitext
+++ b/en/t/think through.720293.wikitext
@@ -11,7 +11,7 @@
 * Hungarian: {{t|hu|végiggondol}}
 {{trans-mid}}
 * Russian: {{t+|ru|проду́мывать}}
-* Serbo-Croatian: {{t+|sh|promisliti}}
+* Serbo-Croatian: {{t+|sh|promisliti}}, {{t+|sh|razmisliti}}
 * Spanish: {{t+|es|cavilar}}
 {{trans-bottom}}
 
