t+ca:[[veterà]] ([[WT:EDIT|Assisted]]) <grognard#54111721>

--- a/en/g/grognard.855664.wikitext
+++ b/en/g/grognard.855664.wikitext
@@ -18,6 +18,7 @@ From {{bor|en|fr|grognard||grumbler}}.
 ====Translations====
 {{trans-top|old soldier}}
 {{trans-mid}}
+* Catalan: {{t|ca|veterà}}
 {{trans-bottom}}
 
 {{trans-top|''games, slang'': person who prefers to play older (versions of) war games or RPGs}}
