t+nn:[[bambus]] ([[WT:EDIT|Assisted]]) <bamboo#54130138>

--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -108,6 +108,7 @@ Borrowed from {{bor|en|nl|bamboe}}, from {{der|en|pt|bambu}}, from {{der|en|ms|b
 * Northern Thai: {{t-needed|nod}}
 * Norwegian:
 *: Bokmål: {{t|nb|bambus|m}}
+*: Nynorsk: {{t|nn|bambus|m}}
 * Paiwan: {{t|pwn|qau}}
 * Pashto: {{t+|ps|باڼس}}
 * Persian: {{t+|fa|خیزران|tr=xayzarân|sc=fa-Arab}}
