--- a/en/e/even so.742278.wikitext
+++ b/en/e/even so.742278.wikitext
@@ -14,7 +14,7 @@
 #*: [T]he American Airlines pilots union softened its stand and offered to accept lower wages for flying smaller "regional jets." '''Even so''', airline management rejected the offer.
 #* '''2009''' Dec. 25, {{w|Paul Krugman}}, "[http://www.nytimes.com/2009/12/25/opinion/25krugman.html Tidings of Comfort]," ''New York Times'' <small>(retrieved 27 Oct 2015)</small>:
 #*: But reform legislation enacted in 2010 . . . created a system of subsidies to help families pay for coverage. '''Even so''', insurance doesn’t come cheap.
-# {{lb|en|archaic}} [[truly|Truly]] the case; in [[exactly]] such a manner; of exactly such a nature.
+# {{lb|en|archaic}} In [[exactly]] such a manner (as said or surmised); of exactly such a nature.
 #* {{circa|1598}} {{w|William Shakespeare}}, ''King Henry V'', act 4, scene 1:
 #*: ''Pistol:'' Trail'st thou the puissant pike?
 #*: ''King Henry V:'' '''Even so'''. What are you?
