t+kxd:[[bayi]] ([[WT:EDIT|Assisted]]) <pig#54152280>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -121,6 +121,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Bengali: {{t|bn|শুওর}}
 * Bouyei: {{t|pcc|duezmul}}, {{t|pcc|mul}}
 * Breton: {{t+|br|pemoc'h|m}}
+* Brunei Malay: {{t|kxd|bayi}}
 * Buginese: {{t|bug|bawi}}
 * Bulgarian: {{t+|bg|свиня́|f}}
 * Burmese: {{t+|my|ဝက်}}
