--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -101,6 +101,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 *: Western Apache: {{t|apw|góchiʼ}}
 * Arabic: {{t|ar|خِنْزِير|m}}, {{t|ar|حَلُوف|m}}
 *: Egyptian Arabic: {{t|arz|خنزير|m|tr=ḵanzīr}}, {{t|arz|حلوف|m|tr=ḥalūf}}
+*: Gulf Arabic: {{t|afb|خنزير|m|tr=ḵanzīr}}
 *: Moroccan Arabic: {{t|ary|حلوف|tr=ḥəluf}}
 * Aramaic:
 *: Hebrew: {{t|arc|חזירא|tr=ħzīrā’|m}}, {{t|arc|חזירתא|tr=ħzīrtā’|f}}
