--- a/en/w/white gold.855391.wikitext
+++ b/en/w/white gold.855391.wikitext
@@ -6,13 +6,14 @@
 ===Noun===
 {{en-noun|~}}
 
-# {{lb|en|obsolete|uncountable}} [[platinum|Platinum]].
 # {{lb|en|countable}} A precious metal [[alloy]] consisting of gold and a platinum group metal such as [[platinum]] or [[palladium]] or other [[white metal]] such as [[nickel]].
 # [[cotton|Cotton]], seen as a valuable commodity.
+# [[sugar|Sugar]], seen as a valuable commodity.
 # [[china|China]] or [[porcelain]], seen as a valuable commodity.
 # {{lb|en|slang|uncountable}} [[cocaine|Cocaine]].
 #* '''1989''', Gabriel G. Nahas, ‎Helene Peters, ''Cocaine: The Great White Plague'', page 122:
 #*: Fleets of planes flew in their daily cargo of '''white gold''', first extracted from coca leaves in Peru or Bolivia and then refined in Colombia.
+# {{lb|en|obsolete|uncountable}} [[platinum|Platinum]].
 
 ====Translations====
 {{trans-top|A precious metal alloy consisting of gold and a platinum group metal}}
