--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -609,9 +609,7 @@ From {{inh|mvi|jpx-ryu-pro|sort=ついきい|*tuki}}.
 * {{q|topicalized}} {{alter|ryu|月ぇ|tr=chichē}}
 
 ===Etymology===
-From {{inh|ryu|jpx-ryu-pro|sort=ちち|*tuki}}.
-
-Cognate with {{cog|ja|月|tr=tsuki}}.
+From {{inh|ryu|jpx-ryu-pro|sort=ちち|*tuki}}, from {{inh|ryu|jpx-pro|sort=ちち|*tukuy}}. Cognate with {{cog|ja|月|tr=tsuki}}.
 
 ===Pronunciation===
 * {{IPA|/t͡ɕi̻t͡ɕi/|lang=ryu|sort=ちち}}
