--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -592,13 +592,13 @@ From {{inh|mvi|jpx-ryu-pro|sort=ついきい|*tuki}}.
 ====Compounds====
 {{der-top4|Compounds}}
 * {{m|ryu|月食|tr=gwatsuku}}
-* {{m|ryu|一月|tr=itigwachi}}
+* {{m|ryu|一月|tr=ichigwachi}}
 * {{m|ryu|二月|tr=nigwachi}}
 * {{m|ryu|三月|tr=sangwachi}}
-* {{m|ryu|四月|tr=sigwachi}}
+* {{m|ryu|四月|tr=shigwachi}}
 * {{m|ryu|五月|tr=gugwachi}}
 * {{m|ryu|六月|tr=rukugwachi}}
-* {{m|ryu|七月|tr=sichigwachi}}
+* {{m|ryu|七月|tr=shichigwachi}}
 * {{m|ryu|八月|tr=hachigwachi}}
 * {{m|ryu|九月|tr=kugwachi}}
 * {{m|ryu|十月|tr=zūgwachi}}
@@ -609,27 +609,33 @@ From {{inh|mvi|jpx-ryu-pro|sort=ついきい|*tuki}}.
 * {{q|topicalized}} {{alter|ryu|月ぇ|tr=chichē}}
 
 ===Etymology===
-From {{inh|ryu|jpx-ryu-pro|sort=ちち|*tuki}}, from {{inh|ryu|jpx-pro|sort=ちち|*tukuy}}. Cognate with {{cog|ja|月|tr=tsuki}}.
+From {{inh|ryu|jpx-ryu-pro|sort=ちち|*tuki}}, from {{inh|ryu|jpx-pro|sort=ちち|*tukuy}}.
+
+Cognate with {{cog|ja|月|tr=tsuki}}.
 
 ===Pronunciation===
-* {{IPA|/t͡ɕi̻t͡ɕi/|lang=ryu|sort=ちち}}
+* {{a|{{ll|ja|首里|Shuri}}-{{ll|ja|那覇|Naha}}}} {{ja-accent/unvoiced|ち}}{{ja-accent/high|ち}} <tt>[ch<s>í</s>chì]</tt> ({{ll|ja|平板型|Heiban}} - [0]))<ref>{{R:Shuri-Naha Dialect Dictionary|チチ|SN20807}}</ref>
+* {{IPA|lang=ryu|[t͡ɕi̻t͡ɕi]|sort=ちち}}
 
 ===Noun===
-{{head|ryu|noun|hiragana|ちち|romaji|chichi|historical hiragana|つぃち|sort=ちち}}
+{{head|ryu|noun|hiragana|ちち|rōmaji|chichi|historical hiragana|つぃち|sort=ちち}}
 
 # the [[moon]]
+# a [[month]]
 
 ====Derived terms====
 {{der-top3}}
-* {{m|ryu|月影|tr=chichikazi}}
+* {{m|ryu|月影|tr=chichikaji}}
 * {{m|ryu|月ぬ物|tr=chichi nu mun}}
-* {{m|ryu|月日|tr=chichihui}}
+* {{m|ryu|月夜|tr=chichū}}
+* {{m|ryu|月日|tr=chichifi}}
 * {{m|ryu|月見|tr=chichimi}}
-* {{m|ryu|朧月|tr='uburujichi}}
-* {{m|ryu|霜月|tr=simuchichi}}
+* {{m|ryu|一月|tr=chuchichi}}
+* {{m|ryu|朧月|tr=uburujichi}}
+* {{m|ryu|霜月|tr=shimuchichi}}
 * {{m|ryu|三日月|tr=mikajichi}}
 * {{m|ryu|毎月|tr=mējichi}}
-* {{m|ryu|閏月|tr=yundzichi}}
+* {{m|ryu|閏月|tr=yunjichi}}
 {{der-bottom}}
 
 {{c|ryu|Astronomy|sort=ちち}}
