--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -140,12 +140,13 @@ From {{inh|en|enm|croke}}, {{m|enm|crok}}, from {{inh|en|ang|*crōc|t=hook, bend
 From {{m|en|crooked||dishonestly come by}}. <ref>[http://andc.anu.edu.au/australian-words/meanings-origins?field_alphabet_value=81 Australian National Dictionary Centre Home » Australian words » Meanings and origins of Australian words and idioms » C]</ref>
 
 ====Adjective====
-{{en-adj}}
+{{en-adj|crooker}}
 
 # {{lb|en|Australia|New Zealand|slang}} Bad, unsatisfactory, not up to [[standard]].
-#: ''That work you did on my car is '''crook''', mate''
+#: ''That work you did on my car is '''crook''', mate.''
 #: ''Not turning up for training was pretty '''crook'''.''
-#: ''Things are '''crook''' at Tallarook.''
+#* '''1981''', Herman Charles Bosman, ''The Collected Works of Herman Charles Bosman'', [http://books.google.com.au/books?id=hNZHAAAAYAAJ&q=%22onkus%22+-intitle:%22%22+-inauthor:%22%22&dq=%22onkus%22+-intitle:%22%22+-inauthor:%22%22&hl=en&sa=X&ei=_YPHT9qHGM2biQfRicC3Dg&redir_esc=y page 101],
+#*: The soup was '''crook'''. It was [[onkus]]. A yellow-bellied platypus couldn′t drink it {{...}}
 #* {{quote-text|lang=en|year=2004|author={{w|Robert Barnard}}|title=A Cry from the Dark|page=21|url=http://books.google.com.au/books?id=NoOp5G-CGqQC&pg=PA21&dq=%22are%7Cbe+crook+at%22+-intitle:%22%22+-inauthor:%22%22&hl=en&sa=X&ei=R4QzT82mDY7qmAWVqN2DAg&redir_esc=y#v=onepage&q=%22are%7Cbe%20crook%20at%22%20-intitle%3A%22%22%20-inauthor%3A%22%22&f=false|passage=“Things are '''crook''' at home at the moment.”}}
 #*: “They′re always '''crook''' at my home.”
 # {{lb|en|Australia|New Zealand|slang}} [[ill|Ill]], [[sick]].
@@ -158,9 +159,6 @@ From {{m|en|crooked||dishonestly come by}}. <ref>[http://andc.anu.edu.au/austral
 #*: I went home on the tram, then Mum went '''crook''' at me because I was late getting home—I had tickets for Mum and her friend to go to the Regent that night and she was annoyed because I was late.
 #* {{quote-text|lang=en|year=2007|author=Ruby Langford Ginibi|title=Don′t Take Your Love to Town|page=100|url=http://books.google.com.au/books?id=6xEKJLBTnkQC&pg=PA100&dq=%22go%7Cgone%7Cwent+crook+at%22+-intitle:%22%22+-inauthor:%22%22&hl=en&sa=X&ei=KYozT_ndH8_omAX1ovSSAg&redir_esc=y#v=onepage&q=%22go%7Cgone%7Cwent%20crook%20at%22%20-intitle%3A%22%22%20-inauthor%3A%22%22&f=false|passage=I went '''crook''' at them for not telling me and as soon as she was well enough I took her home to the camping area and she soon picked up.}}
 #* {{quote-text|lang=en|year=2009|author=Carolyn Landon|title=Cups With No Handles: Memoir of a Grassroots Activist|page=234|url=http://books.google.com.au/books?id=AkMZc1dAwCsC&pg=PA234&dq=%22go%7Cgone%7Cwent+crook+at%22+-intitle:%22%22+-inauthor:%22%22&hl=en&sa=X&ei=0oUzT8KBE4X5mAX58pWJAg&redir_esc=y#v=onepage&q=%22go%7Cgone%7Cwent%20crook%20at%22%20-intitle%3A%22%22%20-inauthor%3A%22%22&f=false|passage=Mum went '''crook''' at me for wasting money, but when Don got a job and spent all his money on a racing bike, she didn′t say a thing to him.}}
-
-=====Usage notes=====
-Synthetic comparative and superlative forms (''[[crooker]]'', ''[[crookest]]'') also find frequent use.
 
 =====Derived terms=====
 * {{l|en|crook as Rookwood}}
