--- a/en/t/TRAF.775541.wikitext
+++ b/en/t/TRAF.775541.wikitext
@@ -1,11 +1,10 @@
 {{also|traf}}
 ==English==
 
-===Acronym===
-{{rfc-header|Acronym}}
-{{head|en|acronym}}
+===Phrase===
+{{en-phrase}}
 
-# [[toss|Toss]], [[refer|Refer]], [[act|Act]], [[file|File]]: A principle of organization used to handle any paper that comes across one's desk.
+# {{acronym of|[[toss]], [[refer]], [[act]], [[file]]|lang=en|nodot=1}}: a principle of organization describing the possible responses to an incoming message or work item.
 
 ===Anagrams===
 * {{anagrams|en|a=afrt|RTFA|fart|frat|raft}}
