--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -178,7 +178,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 *: Swabian: {{t|de|Kosel|f}}
 * Gothic: {{t|got|𐍃𐍅𐌴𐌹𐌽|n}}
 * Greek: {{t+|el|γουρούνι|n}}
-*: Ancient: {{t|grc|ὗς}}, {{t|grc|χοῖρος|m}}
+*: Ancient: {{t|grc|ὗς|m|f}}, {{t|grc|χοῖρος|m}}
 * Greenlandic: {{t|kl|puuluki}}
 * Guerrero Amuzgo: {{t|amu|kítzku}}
 * Gujarati: {{t+|gu|ડુક્કર|m}}, {{t|gu|શૂકર|m}}
