--- a/en/b/bled.6802.wikitext
+++ b/en/b/bled.6802.wikitext
@@ -66,7 +66,7 @@ From {{bor|fr|arq|-}}, from {{der|fr|ar|بِلَاد}}
 * {{alter|ang|blǣd}}
 
 ===Etymology===
-Derivative of {{m|ang|blōwan||to bloom, blossom}}.
+From {{inh|ang|gem-pro|*blēduz}}, {{m|gem-pro|*blōdiz||blossom, sprout}}, from {{der|en|ine-pro|*bʰleh₃-}}. Related to {{m|ang|blōwan||to bloom, blossom}}.
 
 ===Pronunciation===
 * {{IPA|/ˈbleːd/|lang=ang}}
@@ -89,6 +89,7 @@ Derivative of {{m|ang|blōwan||to bloom, blossom}}.
 ====Descendants====
 * {{desc|enm|blede}}, {{l|enm|bled}}
 ** {{desc|en|blead}}
+** {{desc|sco|bleed}}
 
 [[Category:ang:Plants]]
 
