--- a/en/m/moonstone.720226.wikitext
+++ b/en/m/moonstone.720226.wikitext
@@ -23,7 +23,7 @@
 * Hungarian: {{t+|hu|holdkő}}
 {{trans-mid}}
 * Italian: {{t|it|pietra di luna|f}}, {{t|it|lunaria|f}}
-* Japanese: {{t|ja|月長石|tr=げっちょうせき, getchseki|sc=Jpan}}
+* Japanese: {{t|ja|月長石|tr=げっちょうせき, getchōseki|sc=Jpan}}
 * Kazakh: {{t|kk|айтас|sc=Cyrl}}
 * Korean: {{t|ko|월장석(月長石)}}
 * Portuguese: {{t|pt|pedra da Lua|f}}
