--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -101,6 +101,7 @@ From {{inh|en|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m|enm|anȝen}}, fr
 * Albanian: {{t+|sq|përsëri}}
 * Arabic: {{t|ar|مَرَّة أُخْرَى|f|tr=marra ʾuḵrā}}, {{t|ar|كَرَّة أُخْرَى|f|tr=karra ʾuḵrā}} {{qualifier|adverbial accusative used}}, {{t|ar|ثَانِيَةً}}
 *: Egyptian Arabic: {{t|arz|تاني|tr=tāni}}, {{t|arz|كمان|tr=kamān ~ kmān}}
+*: Gulf Arabic: {{t|afb|مرة ثانية|f|tr=marra ṯānya}}
 * Aragonese: {{t-needed|an}}
 * Armenian: {{t+|hy|էլի}}, {{t+|hy|կրկին}}, {{qualifier|Eastern-Armenian}} {{t+|hy|նորից}}, {{qualifier|Western-Armenian}} {{t+|hy|նորեն}}
 * Assamese: {{t|as|আকৌ}}
