--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -501,6 +501,9 @@ Borrowed from {{bor|es|la|simplex}}.
 #: {{syn|es|soso}}
 # {{lb|es|grammar}} {{l|en|simple}}
 
+====Derived terms====
+* {{l|es|a simple vista}}
+
 ====Descendants====
 * {{desc|cbk|simple}}
 
