--- a/en/c/countdown.34096.wikitext
+++ b/en/c/countdown.34096.wikitext
@@ -22,7 +22,7 @@ From {{compound|en|count|down}}.
 ====Translations====
 {{trans-top|a count backward to the time of some event}}
 * Arabic: {{t|ar|عَدٌّ تَنَازُلِيٌّ|m}}
-* Bulgarian: {{t|bg|отброяване|n|tr=otbrojavane}}
+* Bulgarian: {{t|bg|отброяване|n}}
 * Chinese:
 *: Mandarin: {{t+|cmn|倒數|sc=Hani}}, {{t+|cmn|倒数|tr=dàoshǔ|sc=Hani}}, {{t+|cmn|倒計時}}, {{t+|cmn|倒计时|tr=dàojìshí}}
 * Czech: {{t|cs|odpočítávání|n}}
@@ -31,14 +31,14 @@ From {{compound|en|count|down}}.
 * French: {{t+|fr|compte à rebours|m}}, {{t+|fr|décompte|m}}
 * Georgian: {{t|ka|უკუმიმართულებით ათვლა}}, {{t|ka|უკუათვლა}}
 * German: {{t+|de|Countdown|m}}
-* Greek: {{t+|el|αντίστροφη μέτρηση|f|sc=Grek}}
-* Hebrew: {{t|he|ספירה לאחור|f|tr=sfira le'akhor|sc=Hebr}}
+* Greek: {{t+|el|αντίστροφη μέτρηση|f}}
+* Hebrew: {{t|he|ספירה לאחור|f|tr=sfira le'akhor}}
 * Hungarian: {{t|hu|visszaszámolás}}
 * Italian: {{t+|it|conto alla rovescia|m}}
 {{trans-mid}}
-* Japanese: {{t|ja|カウントダウン|tr=kauntodaun|sc=Jpan}}
+* Japanese: {{t|ja|カウントダウン|tr=kauntodaun}}
 * Korean: {{t+|ko|카운트다운}}
-* Macedonian: {{t|mk|одбројување|n|tr=odbrojúvanje|sc=Cyrl}}
+* Macedonian: {{t|mk|одбројување|n}}
 * Norwegian:
 *: Bokmål: {{t|nb|nedtelling|m|f}}
 *: Nynorsk: {{t|nn|nedteljing|f}}
