--- a/en/u/unfriendliness.742226.wikitext
+++ b/en/u/unfriendliness.742226.wikitext
@@ -15,7 +15,7 @@ From {{af|en|unfriendly|-ness}}. Compare {{cog|nl|onvriendelijkheid}}, {{cog|de|
 
 ====Translations====
 {{trans-top|the quality of being unfriendly}}
-* Danish: {{t|da|ovenlighed|c}}
+* Danish: {{t|da|uvenlighed|c}}
 * German: {{t|de|Unfreundlichkeit|f}}
 * Hungarian: {{t+|hu|barátságtalanság}}
 * Low German:
