t+da:[[udiagnosticeret]] ([[WT:EDIT|Assisted]]) <undiagnosed#54275157>

--- a/en/u/undiagnosed.745824.wikitext
+++ b/en/u/undiagnosed.745824.wikitext
@@ -10,6 +10,7 @@
 
 ====Translations====
 {{trans-top|not diagnosed}}
+* Danish: {{t|da|udiagnosticeret}}
 * Greek: {{t|el|αδιάγνωστος}}
 * Norwegian:
 *: Bokmål: {{t|nb|udiagnostisert}}
